src/test/ui/impl-trait/bindings.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:14:29
   |
LL |     const foo: impl Clone = x;
   |                             ^
   |
   = help: use the `|| { ... }` closure form instead

error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:20:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^
   |
   = help: use the `|| { ... }` closure form instead

error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:27:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^
   |
   = help: use the `|| { ... }` closure form instead

error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:34:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0434`.
